Pagination mobile fix

--- a/sass/theme/global/_pagination.scss
+++ b/sass/theme/global/_pagination.scss
@@ -32,6 +32,7 @@
 }
 
 .next, .prev {
+	padding: 0.5rem 0;
 	&:hover {
 		background-image: none;
 	}
